# Luciper

./: .eslintrc.json  .gitignore  .prettierrc  PRD.md  electron.vite.config.ts  jest.config.ts  package-lock.json  package.json  prd_review.md  tsconfig.json
docs/: implementation-plan.md
docs/architecture/: 00-overview.md  01-audio-capture.md  02-stt-runtime.md  03-post-processing.md  04-subtitle-editor.md  05-lexicon-learning.md  06-sidecar-manager.md
profiles/tekken/: .gitkeep
src/main/: db.ts  main.ts  model-store.ts  sidecar-manager.ts
src/main/__tests__/: sidecar-manager.test.ts
src/preload/: preload.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx
stt_worker/: __init__.py  db.ts  dispatcher.py  main.py  model_store.ts  notification_sender.py  pyproject.toml  requirements.txt  sidecar_manager.ts
stt_worker/tests/: __init__.py  test_placeholder.py
