[project]
name = "luciper-stt-worker"
version = "0.1.0"
description = "Tekken-specialized local STT worker for Luciper"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.2",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.3.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stt_worker --cov-report=term-missing --cov-fail-under=80"
